.k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: louper-deployment
  labels:
    app: louper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: louper
  template:
    metadata:
      labels:
        app: louper
    spec:
      containers:
        - name: louper-container
          image: mark3labs/louper-web:latest
          volumeMounts:
            - mountPath: '/app/data'
              name: volume
          imagePullPolicy: Always
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: louper-db
