.k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: louper-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: louper
