.k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: louper-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-louper
    nginx.ingress.kubernetes.io/enable-cors: 'true'
spec:
  tls:
    - hosts:
        - louper.dev
      secretName: letsencrypt-louper
  rules:
    - host: louper.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: louper-service
                port:
                  number: 3000
  ingressClassName: nginx
